--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 			<div class="description">
 				<center>
-					<img src="/logos.png" style="width: 40%;" alt="RiG">
+					<img src="/sih/logos.png" style="width: 40%;" alt="RiG">
 
 					<h1>RiG - Smart India Hackathon Funding Portal!</h1>
 				</center>
